--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -11,6 +11,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="150dp"
         android:gravity="center"
         android:text="@string/registration"
         android:textColor="#DD1313"
@@ -21,14 +22,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="40dp"
         android:layout_marginTop="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="40dp"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="50dp"
@@ -38,25 +40,15 @@
 
             <EditText
                 android:id="@+id/fist"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/fist" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:layout_width="50dp"
+                android:layout_width="145dp"
                 android:layout_height="50dp"
-                android:layout_marginRight="10dp"
-                android:src="@drawable/username" />
+                android:hint="@string/fist"
+                android:layout_marginRight="10dp"/>
 
             <EditText
                 android:id="@+id/last"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="115dp"
+                android:layout_height="50dp"
                 android:hint="@string/last" />
         </LinearLayout>
 
@@ -111,7 +103,7 @@
                 android:id="@+id/cpass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/pass"
+                android:hint="@string/_pass"
                 android:inputType="textPassword" />
         </LinearLayout>
 
@@ -145,13 +137,26 @@
             android:text="@string/register">
 
         </Button>
-        <TextView
-            android:gravity="center"
-            android:id="@+id/link_login"
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/link_login"
-            />
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_login" />
+
+            <TextView
+
+                android:id="@+id/link_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/link_login" />
+        </LinearLayout>
+
 
     </LinearLayout>
 
