--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -103,6 +103,7 @@
                 android:src="@drawable/sex" />
 
             <RadioGroup
+                android:id="@+id/RadioGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
