--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="#03A9F4"
     android:orientation="vertical"
     tools:context=".registration">
 
@@ -36,14 +36,14 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginRight="10dp"
-                android:src="@drawable/username" />
+                android:src="@drawable/ic_person" />
 
             <EditText
                 android:id="@+id/fist"
                 android:layout_width="145dp"
                 android:layout_height="50dp"
-                android:hint="@string/fist"
-                android:layout_marginRight="10dp"/>
+                android:layout_marginRight="10dp"
+                android:hint="@string/fist" />
 
             <EditText
                 android:id="@+id/last"
@@ -60,7 +60,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginRight="10dp"
-                android:src="@drawable/email" />
+                android:src="@drawable/ic_email" />
 
             <EditText
 
@@ -79,7 +79,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginRight="10dp"
-                android:src="@drawable/lock" />
+                android:src="@drawable/ic_lock" />
 
             <EditText
                 android:id="@+id/pass"
@@ -97,7 +97,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginRight="10dp"
-                android:src="@drawable/lock" />
+                android:src="@drawable/ic_lock" />
 
             <EditText
                 android:id="@+id/cpass"
@@ -119,11 +119,12 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginRight="10dp"
-                android:src="@drawable/sex" />
+                android:background="#03A9F4"
+                android:src="@drawable/gender" />
 
             <Spinner
                 android:id="@+id/spsex"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:entries="@array/sex" />
