--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/my_nav">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/my_nav"
+    app:startDestination="@id/fragment_contact">
+
+
+    <fragment
+        android:id="@+id/fragment_contact"
+        android:name="com.example.shop_android.fragment_contact"
+        android:label="fragment_home"
+
+        />
+    <fragment
+        android:id="@+id/fragment_profile"
+        android:name="com.example.shop_android.fragment_profile"
+        android:label="fragment_profile"
+        />
 
 </navigation>
