--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -18,7 +18,7 @@
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:layout_marginTop="645dp"
+        android:layout_marginTop="630dp"
         android:foregroundGravity="bottom"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,9 +26,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appbar"
         app:layout_constraintVertical_bias="0.0">
-
         <View
-
             android:id="@+id/view"
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -43,9 +41,10 @@
         <EditText
             android:id="@+id/message"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginStart="5dp"
             android:layout_marginLeft="5dp"
+            android:layout_marginBottom="1dp"
             android:ems="10"
             android:gravity="start|top"
             android:hint="@string/type"
