--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,9 +9,9 @@
     tools:context=".Login">
 
     <TextView
-        android:layout_marginTop="150dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="150dp"
         android:gravity="center"
         android:text="@string/login"
         android:textColor="#F60D0D"
@@ -20,8 +20,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
         android:layout_marginLeft="40dp"
+        android:layout_marginTop="80dp"
         android:layout_marginRight="40dp"
         android:orientation="vertical">
 
@@ -58,11 +58,23 @@
                 android:text="@string/text_register" />
 
             <TextView
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:id="@+id/link_register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/link_register" />
         </LinearLayout>
+
+        <TextView
+            android:layout_marginTop="10dp"
+            android:id="@+id/forgot"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/forgot"
+            android:textColor="#F44336"
+            android:gravity="center"
+            android:textSize="15dp" />
 
 
     </LinearLayout>
