--- a/app/src/main/res/layout/app_chat_bar.xml
+++ b/app/src/main/res/layout/app_chat_bar.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp">
 
-        <ImageView
+
+        <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/ortherAvata"
             android:layout_width="40dp"
             android:layout_height="40dp"
@@ -18,6 +19,8 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:src="@drawable/user"
+            app:civ_border_width="2dp"
+            app:civ_border_color="#FF000000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
