--- a/app/src/main/res/layout/start_up.xml
+++ b/app/src/main/res/layout/start_up.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical">
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom"
+        android:background="#2196F3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
