--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#03A9F4"
     android:orientation="vertical"
-    tools:context=".Login">
+  >
 
     <TextView
         android:layout_width="match_parent"
@@ -58,6 +58,7 @@
                 android:text="@string/text_register" />
 
             <TextView
+                android:textColorLink="#0C8FF8"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:id="@+id/link_register"
