--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -4,11 +4,16 @@
     <item
         android:id="@+id/fragment_contact"
         android:icon="@drawable/ic_contacts"
-        android:title="Contact"
+        android:title="@string/Contact"
         android:enabled="true"/>
+    <item
+    android:id="@+id/fragment_friends"
+    android:icon="@drawable/ic_people"
+    android:title="@string/friends"
+    android:enabled="true"/>
     <item
         android:id="@+id/fragment_profile"
         android:icon="@drawable/ic_settings"
-        android:title="setting"
+        android:title="@string/setting"
         android:enabled="true"/>
 </menu>
