--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -8,14 +8,22 @@
 
     <fragment
         android:id="@+id/fragment_contact"
-        android:name="com.example.shop_android.fragment_contact"
+        android:name="com.example.shop_android.fragment.fragment_contact"
         android:label="fragment_home"
+        tools:layout="@layout/activity_contact"
 
         />
     <fragment
         android:id="@+id/fragment_profile"
-        android:name="com.example.shop_android.fragment_profile"
+        android:name="com.example.shop_android.fragment.fragment_profile"
         android:label="fragment_profile"
+        tools:layout="@layout/activity_profile"
         />
+    <fragment
+        android:id="@+id/fragment_friends"
+        android:name="com.example.shop_android.fragment.fragment_friends"
+        android:label="fragment_friends"
+        tools:layout="@layout/fragment_friends"
+       />
 
 </navigation>
