--- a/app/src/main/res/layout/list_mess.xml
+++ b/app/src/main/res/layout/list_mess.xml
@@ -2,15 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+   >
 
     <LinearLayout
+
+        android:id="@+id/bubble"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/ic_baseline_chat_bubble_24"
         android:padding="25dp">
 
         <TextView
+            android:maxLines = "10"
+            android:minLines="1"
             android:id="@+id/tvmessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
