--- a/app/src/main/res/layout/list_mess.xml
+++ b/app/src/main/res/layout/list_mess.xml
@@ -10,17 +10,19 @@
         android:id="@+id/bubble"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/ic_baseline_chat_bubble_24"
-        android:padding="25dp">
+        android:background="@drawable/ic_chat_bubble_user"
+        android:padding="15dp">
 
         <TextView
-            android:maxLines = "10"
+            android:maxWidth="250dp"
             android:minLines="1"
+            android:inputType="textMultiLine"
             android:id="@+id/tvmessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/type"
+            android:singleLine="false"
             android:textColor="@color/white" />
 
 
