--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -22,6 +22,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
         android:divider="@android:color/transparent"
         android:dividerHeight="5dp"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
@@ -43,8 +44,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appbar"
         app:layout_constraintVertical_bias="0.0">
-
-
         <View
             android:id="@+id/view"
             android:layout_width="match_parent"
