--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -61,6 +61,7 @@
                 android:text="@string/text_register" />
 
             <TextView
+                android:inputType="textUri"
                 android:textColorLink="#0C8FF8"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
