--- a/app/src/main/res/layout/friends_request.xml
+++ b/app/src/main/res/layout/friends_request.xml
@@ -8,7 +8,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="5dp">
 
         <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/Avata"
@@ -42,7 +43,7 @@
                 <Button
                     android:id="@+id/addfriend"
                     android:background="#1c77f2"
-                    android:layout_width="150dp"
+                    android:layout_width="120dp"
                     android:layout_height="50dp"
                     android:text="@string/AddFriend"
                     android:layout_marginRight="5dp"/>
@@ -50,7 +51,7 @@
                 <Button
                     android:id="@+id/remove"
                     android:background="#e4e7f0"
-                    android:layout_width="150dp"
+                    android:layout_width="120dp"
                     android:layout_height="50dp"
                     android:text="@string/remove" />
             </LinearLayout>
